[package]
name = "grpc-server"
version = "0.1.0"
authors = ["Brett Norris <b.norris@calendly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
tonic-health = "0.2.0"

[build-dependencies]
tonic-build = "0.3"